#492 - Polishing.
Use Java 8 syntax for Map creation. Add author tags. Use simpler table names.

Original pull request: #493.